[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-diffusion-distillation"
version = "0.1.0"
description = "MNIST DDPM training and detailed-balance reward learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "torch>=2.2",
    "torchvision>=0.17",
]

[project.scripts]
denoising-diffusion-train = "src.cli:main"
denoising-diffusion-reward = "src.reward_cli:main"
denoising-diffusion-compatibility = "src.compatibility_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src",
]
